objects/echosign_dev1__Layer_Template__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Agreement_Template__c</fullName>
        <label>Agreement Template</label>
        <referenceTo>echosign_dev1__Agreement_Template__c</referenceTo>
        <relationshipName>Add_Layer_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document_Keys__c</fullName>
        <label>Document Keys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document_Names__c</fullName>
        <label>Layer Document Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Add Form Field Template</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Add Form Field Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add Form Field Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>